2006-06-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_LIBOBJS): Don't rely on the caller defining $1.

2006-06-07  Stepan Kasal  <kasal@ucw.cz>

	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Rewrite using AC_PROG_MKDIR_P.

2006-06-06  Stepan Kasal  <kasal@ucw.cz>
	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* lib/am/distdir.am: Do not call $(mkdir_p) for each
	distributed file, collect them and create them in one run,
	and strip $(srcdir) and $(top_srcdir) all at once.
	Fix some comment typos.

2006-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/depend.m4 (_AM_DEPENDENCIES): The IRIX MIPSpro compiler
	7.4.4m may omit the first included header dependency information
	with `-MDupdate'.  Refine test to catch this.

	* configure.ac (ACLOCAL): Use `-I m4' to match `./bootstrap'
	procedure.

	* tests/gettext.test: AM_PROG_GETTEXT of gettext >= 0.14.3
	requires `config.rpath' to be present, and automake now enforces
	this.  Test this, but only if the gettext installation works and
	is recent enough to provide this diagnosis.
	* tests/gettext.test: Provide a dummy `config.rpath' for all
	subsequent checks.
	* tests/gettext2.test, tests/subcond.test: Likewise.

	* tests/pr401.test: Replace "perl -i" with sed and mv, for
	MinGW perl.
	* tests/pr401b.test, tests/pr401c.test, tests/python11.test,
	* tests/yacc6.test, tests/yacc8.test: Likewise.

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Do not use
	plain `grep' on the Makefile, as its line length may exceed that
	for grep.  Bug report against coreutils by Sam Sirlin.
	* THANKS: Update.

2006-05-26  Sergey Poznyakoff  <gray@Mirddin.farlep.net>  (tiny change)

	* doc/automake.texi (Options): Add anchor `tar-formats'.

2006-05-25  Noah Misch  <noah@cs.caltech.edu>

	* lib/Automake/XFile.pm (lock): Allow EOPNOTSUPP, besides
	ENOLCK.  Only mention `make -j' when applicable.  Only raise
	fatal errors when `make -j' is involved.  Improve error message.

2006-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
