@@ -68,6 +68,7 @@ Elrond			Elrond@Wunder-Nett.org
 Enrico Scholz		enrico.scholz@informatik.tu-chemnitz.de
 Erez Zadok		ezk@cs.columbia.edu
 Eric Blake		ebb9@byu.net
+Eric Dorland		eric@debian.org
 Eric Magnien		emagnien@club-internet.fr
 Eric Siegerman		erics_97@pobox.com
 Eric Sunshine		sunshine@sunshineco.com
