@@ -2879,7 +2879,7 @@ sub scan_texinfo_file ($)
 	  next if $outfile;
 
 	  $outfile = $1;
-	  if ($outfile =~ /\.(.+)$/ && $1 ne 'info')
+	  if ($outfile =~ /\.([^.]+)$/ && $1 ne 'info')
 	    {
 	      error ("$filename:$.",
 		     "output `$outfile' has unrecognized extension");
