@@ -1,4 +1,4 @@
-@set UPDATED 6 June 2006
-@set UPDATED-MONTH June 2006
+@set UPDATED 26 May 2006
+@set UPDATED-MONTH May 2006
 @set EDITION 1.9a
 @set VERSION 1.9a
