@@ -565,6 +565,7 @@ txinfo27.test \
 txinfo28.test \
 txinfo29.test \
 txinfo30.test \
+txinfo31.test \
 transform.test \
 unused.test \
 vars.test \
