@@ -1,3 +1,10 @@
+2006-06-24  Eric Dorland  <eric@debian.org>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* automake.in (scan_texinfo_file): Fix matching file extension.
+	* tests/txinfo31.test: New test.
+	* tests/Makefile.am: Update.
+
 2006-06-07  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (handle_LIBOBJS): Don't rely on the caller defining $1.
